<resources>
    <string name="app_name">TicTacToe-Pocket</string>
    <string name="start">start</string>
    <string name="exit">exit</string>
    <string name="stats">stats</string>
    <string name="next">next</string>
    <string name="sunemoji">☀️</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="leave">Leave</string>
    <string name="playmode"><u>Play mode selection</u></string>
    <string name="registerTitle"><u>Registeration</u></string>
    <string name="loginTitle"><u>Login</u></string>
    <string name="setupName">Enter a username</string>
    <string name="setupEmail">Enter your email</string>
    <string name="setupPassword">Enter your password</string>
    <string name="vs">Versus</string>
    <string name="Player1">Player 1</string>
    <string name="Player2">Player 2</string>
    <string name="BOT">BOT</string>
    <string name="back_desc">Back button</string>
    <string name="back">Back</string>
    <string name="playAgain">Play Again!</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="yesAcc">Already have an account?</string>
    <string name="noAcc">Don\'t have an account?</string>
    <string name="createRoom">Create Room</string>
    <string name="noPlayers">No active rooms yet!</string>
    <string name="tieGame">Tied Game!</string>

    <!--Dialog choose image start-->
    <string name="title_choose_image_provider">Choose</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_camera">Camera</string>

    <string name="permission_camera_denied">
        <![CDATA[Camera permission is needed to take a picture. Please allow permission from Settings > Permissions.]]></string>
    <string name="permission_gallery_denied">
        <![CDATA[Gallery permission is needed to take a picture. Please allow permission from Settings > Permissions.]]></string>

    <string name="error_failed_to_create_camera_image_file">Failed to create Camera image file</string>
    <string name="error_failed_pick_gallery_image">Failed to pick Gallery image</string>
    <string name="error_failed_to_crop_image">Failed to crop image</string>
    <string name="error_failed_to_compress_image">Failed to compress image</string>
    <string name="error_task_cancelled">Task Cancelled</string>
    <string name="error_camera_app_not_found">Camera app not found</string>

    <!-- uCrop string resource start -->
    <string name="ucrop_label_original">Original</string>
    <string name="ucrop_label_edit_photo">Edit Photo</string>
    <string name="ucrop_menu_crop">Crop</string>
    <string name="ucrop_rotate">Rotate</string>
    <string name="ucrop_scale">Scale</string>
    <string name="ucrop_crop">Crop</string>
    <!-- uCrop string resource end -->

    <!--Dialog choose image end-->
</resources>